objects/FieloCH__ChallengeTag__c.object
<CustomObject>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>ChallengeTags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCH__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>FieloEE__Tag__c</referenceTo>
        <relationshipLabel>Challenge Tags</relationshipLabel>
        <relationshipName>ChallengeTags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Challenge Tag</label>
    <nameField>
        <displayFormat>CHT-{00000}</displayFormat>
        <label>Challenge Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>